# RAG-project

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  bitbucket-pipelines.yml  docker-compose.service.yml  pyproject.toml  rag-api-spec.md  rag-api-spec.yaml  test.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_pgvector_extension.py  0003_vector_and_extras.py
app/: __init__.py  auth.py  config.py  embeddings.py  errors.py  llm.py  logging_utils.py  main.py  models.py  observability.py  services_ingest.py  services_query.py  store.py  worker.py
scripts/: db_upgrade.py  eval_quality_gate.py  load_test.py
tests/: conftest.py  test_api.py
